compiler/testData/diagnostics/tests/objects/kt21515/annotationConstructor.fir.kt
// !LANGUAGE: -ProhibitVisibilityOfNestedClassifiersFromSupertypesOfCompanion

open class Base {
    companion object {
        annotation class Foo
    }
}

class Derived : Base() {

    @<!OTHER_ERROR!>Foo<!>
    fun foo() = 42
}